--- a/MovieMate/MovieMate/Views/Base.lproj/Main.storyboard
+++ b/MovieMate/MovieMate/Views/Base.lproj/Main.storyboard
@@ -171,38 +171,78 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="изображение по умолчанию" translatesAutoresizingMaskIntoConstraints="NO" id="vV1-C5-Rnn">
-                                <rect key="frame" x="0.0" y="59" width="393" height="600"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S1C-G2-i5L">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9U7-GI-7qX">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="983"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="изображение по умолчанию" translatesAutoresizingMaskIntoConstraints="NO" id="GAN-Ak-tTK">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="600"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название фильма" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xnt-Kx-KfY">
+                                                <rect key="frame" x="6" y="605" width="381" height="32.666666666666629"/>
+                                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="32"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3Dy-XV-gQ0">
+                                                <rect key="frame" x="20" y="677.66666666666663" width="353" height="64.333333333333371"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7c-65-IQx">
+                                                        <rect key="frame" x="0.0" y="0.0" width="353" height="24.666666666666668"/>
+                                                        <fontDescription key="fontDescription" name="Charter-Roman" family="Charter" pointSize="20"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Описание" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eek-5I-Unf">
+                                                        <rect key="frame" x="0.0" y="39.666666666666742" width="353" height="24.666666666666671"/>
+                                                        <fontDescription key="fontDescription" name="Charter-Roman" family="Charter" pointSize="20"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemMintColor"/>
+                                        <constraints>
+                                            <constraint firstItem="Xnt-Kx-KfY" firstAttribute="top" secondItem="GAN-Ak-tTK" secondAttribute="bottom" constant="5" id="0Nn-bf-60v"/>
+                                            <constraint firstItem="3Dy-XV-gQ0" firstAttribute="top" secondItem="Xnt-Kx-KfY" secondAttribute="bottom" constant="40" id="DQP-VY-JyH"/>
+                                            <constraint firstAttribute="trailing" secondItem="GAN-Ak-tTK" secondAttribute="trailing" id="Fv1-UI-PC2"/>
+                                            <constraint firstItem="GAN-Ak-tTK" firstAttribute="leading" secondItem="9U7-GI-7qX" secondAttribute="leading" id="JJJ-TS-9Cc"/>
+                                            <constraint firstAttribute="trailing" secondItem="3Dy-XV-gQ0" secondAttribute="trailing" constant="20" id="TY8-lY-sgi"/>
+                                            <constraint firstItem="Xnt-Kx-KfY" firstAttribute="leading" secondItem="9U7-GI-7qX" secondAttribute="leading" constant="6" id="fzC-lb-7BQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="Xnt-Kx-KfY" secondAttribute="trailing" constant="6" id="lvV-1B-mhz"/>
+                                            <constraint firstItem="GAN-Ak-tTK" firstAttribute="top" secondItem="9U7-GI-7qX" secondAttribute="top" id="mMu-uf-ImD"/>
+                                            <constraint firstItem="3Dy-XV-gQ0" firstAttribute="leading" secondItem="9U7-GI-7qX" secondAttribute="leading" constant="20" id="nma-BL-4SZ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="600" id="cOk-eW-1XJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="9U7-GI-7qX" secondAttribute="bottom" id="1e7-XC-es0"/>
+                                    <constraint firstItem="9U7-GI-7qX" firstAttribute="width" secondItem="S1C-G2-i5L" secondAttribute="width" multiplier="1:1" id="2ZI-Uk-568"/>
+                                    <constraint firstItem="9U7-GI-7qX" firstAttribute="height" secondItem="S1C-G2-i5L" secondAttribute="height" multiplier="0.504611" constant="600" id="2gN-3t-ejn"/>
+                                    <constraint firstAttribute="trailing" secondItem="9U7-GI-7qX" secondAttribute="trailing" id="PBd-mU-97O"/>
+                                    <constraint firstItem="9U7-GI-7qX" firstAttribute="top" secondItem="S1C-G2-i5L" secondAttribute="top" id="V3r-B5-UlV"/>
+                                    <constraint firstItem="9U7-GI-7qX" firstAttribute="leading" secondItem="S1C-G2-i5L" secondAttribute="leading" id="p4g-h0-KzE"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Описание" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKu-5q-fr5">
-                                <rect key="frame" x="156.66666666666666" y="709" width="80" height="99"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <viewLayoutGuide key="contentLayoutGuide" id="M0O-cC-cap"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="146-YV-9Ih"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="53G-YS-xGi"/>
                         <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="dKu-5q-fr5" firstAttribute="top" secondItem="vV1-C5-Rnn" secondAttribute="bottom" constant="50" id="3Hi-UH-IJW"/>
-                            <constraint firstItem="dKu-5q-fr5" firstAttribute="centerX" secondItem="53G-YS-xGi" secondAttribute="centerX" id="Hbn-bQ-JOQ"/>
-                            <constraint firstItem="53G-YS-xGi" firstAttribute="bottom" secondItem="dKu-5q-fr5" secondAttribute="bottom" constant="10" id="OKS-54-gGV"/>
-                            <constraint firstItem="vV1-C5-Rnn" firstAttribute="trailing" secondItem="53G-YS-xGi" secondAttribute="trailing" id="PTv-LL-xlk"/>
-                            <constraint firstItem="vV1-C5-Rnn" firstAttribute="leading" secondItem="53G-YS-xGi" secondAttribute="leading" id="UR5-Vk-12s"/>
-                            <constraint firstItem="vV1-C5-Rnn" firstAttribute="top" secondItem="53G-YS-xGi" secondAttribute="top" id="ezM-jN-12h"/>
+                            <constraint firstItem="S1C-G2-i5L" firstAttribute="top" secondItem="53G-YS-xGi" secondAttribute="top" id="Flm-B4-L4Q"/>
+                            <constraint firstItem="S1C-G2-i5L" firstAttribute="bottom" secondItem="53G-YS-xGi" secondAttribute="bottom" id="a3a-Nj-oiy"/>
+                            <constraint firstItem="S1C-G2-i5L" firstAttribute="leading" secondItem="53G-YS-xGi" secondAttribute="leading" id="jlU-2k-ShP"/>
+                            <constraint firstItem="S1C-G2-i5L" firstAttribute="trailing" secondItem="53G-YS-xGi" secondAttribute="trailing" id="nXk-RI-pPy"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="imageView" destination="vV1-C5-Rnn" id="Mri-ve-UAT"/>
-                        <outlet property="labelOut" destination="dKu-5q-fr5" id="c89-Vl-hyo"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3mg-Z9-Acp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2193" y="-156"/>
+            <point key="canvasLocation" x="2191.6030534351144" y="-156.33802816901408"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ybf-l9-Ewa">
@@ -237,6 +277,9 @@
         </systemColor>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
